# waied

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  jira.cpp  jira.h  main.cpp  qml.qrc  task.cpp  task.h  taskmanager.cpp  taskmanager.h  worklog.cpp
.github/workflows/: waied_build.yml
src/: CMakeLists.txt  cache.cpp  cache.h  jira.cpp  jira.h  log.h  main.cpp  qtquickcontrols2.conf  sortfilterproxymodel.cpp  sortfilterproxymodel.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h  worklog.cpp  worklog.h
src/ui/: fonts.qrc  qml.qrc
src/ui/qml/: InfoCard.qml  Summary.qml  TaskList.qml  TaskListItem.qml  TasksView.qml  UserInfoView.qml  main.qml
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  CacheRCTest.cpp  CacheTest.cpp  helpers.h  serveTestData.py
tests/testData/: task_list.json  worklog_1000.json  worklog_1002.json  worklog_1003.json  worklog_1008.json
ui/qml/: TaskList.qml  main.qml
